demo/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-deployment
  labels:
    app:  mongo
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app:  mongo
    spec:
      containers:
      - image:  mongo:5.0
        name:  mongo
        resources:
          limits:
            cpu: "20m"
            memory: "55M"      
        ports:
        - containerPort:  27017
---
apiVersion: v1
kind: Service
metadata:
  name:  mongo-service
spec:
  selector:
    app:  mongo
  ports:
  - protocol:  TCP
    port:  27017
    targetPort:  27017
